@@ -16,3 +16,6 @@
   </head>
 
   <body {if $user_dbl eq 'y' and $dblclickedit eq 'y' and $tiki_p_edit eq 'y'}ondblclick="location.href='tiki-editpage.php?page={$page}';"{/if}>  
+{if $minical_reminders}
+<iframe width='0' height='0' frameborder="0" src="tiki-minical_reminders.php"></iframe>
+{/if}  
