@@ -1,5 +1,8 @@
 The page {$mail_page} was changed by {$mail_user} at {$mail_date|tiki_short_datetime}
-You can edit the page following this link: http://{$mail_machine}?page={$mail_page}
+You can edit the page following this link: {$mail_machine}?page={$mail_page}
+Comment: {$mail_comment}
+
+Diff: {$mail_machine}/tiki-pagehistory.php?page={$mail_page}&diff2={$mail_last_version}
 
 The new page content is
 {$mail_pagedata}
